<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.feed.FeedActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/feed_cl_presentation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/feed_bt_favorites"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/feed_bt_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/feed_bt_logout">
            <ImageView
                android:id="@+id/feed_iv_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_favorite_border_24"
                android:contentDescription="@string/favorites"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorites"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/feed_iv_favorites"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/feed_bt_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf='parent'>
            <ImageView
                android:id="@+id/feed_iv_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_sensor_door_24"
                android:contentDescription="@string/logout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/feed_iv_logout"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <org.imaginativeworld.whynotimagecarousel.ImageCarousel
        android:id="@+id/feed_ic_carousel"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/feed_cl_presentation"/>

    <ProgressBar
        android:id="@+id/feed_pb_carousel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/feed_ic_carousel"
        app:layout_constraintBottom_toBottomOf="@id/feed_ic_carousel"
        app:layout_constraintStart_toStartOf="@id/feed_ic_carousel"
        app:layout_constraintEnd_toEndOf="@id/feed_ic_carousel"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/feed_rv_news"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_news"
        app:layout_constraintTop_toBottomOf="@id/feed_ic_carousel"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ProgressBar
        android:id="@+id/feed_pb_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/feed_rv_news"
        app:layout_constraintBottom_toBottomOf="@id/feed_rv_news"
        app:layout_constraintStart_toStartOf="@id/feed_rv_news"
        app:layout_constraintEnd_toEndOf="@id/feed_rv_news"/>

</androidx.constraintlayout.widget.ConstraintLayout>